[metadata]
name = fape
version = 0.0.1
license = MIT
author = Ryoma Sato
author_email = r.sato@ml.ist.i.kyoto-u.ac.jp
url = https://github.com/joisino/fape
description = Fair package enuemeration for group recommendations
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
